<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PinBurg</string>
    <string name="title_pins">Pins</string>
    <string name="title_tagmyfav">Add Pins</string>
    <string name="title_arroundme">Pins Arround You</string>
    <string name="title_my_tagged_pins">My Pins</string>
    <string name="title_my_alert_me">Alert Me</string>
    <string name="title_my_profile">My Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_catogaries">Find Burg</string>
    <string name="btn_login_with_fb">Login with Facebook</string>
    <string name="btn_login_with_pinburg">Login with PinBurg</string>
    <string name="btn_login_as_guest">Login as a Guest</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="remember">Remember me</string>
    <string name="login">Login</string>
    <string name="back">Go back</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="address">Address Line</string>
    <string name="clear">Clear</string>
   	<string name="doyouwant">Do you want to add this location as your pin ?</string>
   	<string name="listview">List-View</string>
   	<string name="mapview">Map-View</string>
   	<string name="notifyme">Notify me</string>
   	<string name="restart">Restart</string>
   	<string name="cancel">Cancel</string>
   	<string name="places_according_to">Explore according to..</string>   
	<string name="near_to_you">Near to You</string>
	<string name="taste">Taste</string>
	<string name="categories">Category</string>
	<string name="highly_rated">Highly Rated</string>
	<string name="done">Done</string>
	<string name="no_category_selected">You haven\'t \n selected any category.</string>
</resources>