<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_theme_back"
        android:padding="10dp"
        android:text="@string/places_according_to"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp" >

        <TextView
            android:id="@+id/frag_search_tv_near"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_blue_textbox"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/near_to_you"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/activated_listitem_color" />

        <TextView
            android:id="@+id/frag_search_tv_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_blue_textbox"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/categories"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/activated_listitem_color" />

        <TextView
            android:id="@+id/frag_search_tv_taste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_blue_textbox"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/taste"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/activated_listitem_color" />

        <TextView
            android:id="@+id/frag_search_tv_highly_rated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_blue_textbox"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/highly_rated"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/activated_listitem_color" />
    </LinearLayout>

</LinearLayout>