<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_blue_textbox"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall" >
        </EditText>

        <EditText
            android:id="@+id/et_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_blue_textbox"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/et_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_blue_textbox"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/et_signup_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_blue_textbox"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/dob"
            android:inputType="date"
            android:padding="5dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/spnr_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/btn_dropdown" />

        <Spinner
            android:id="@+id/spnr_state"
            style="?android:attr/spinnerDropDownItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/btn_dropdown" />

        <Spinner
            android:id="@+id/spnr_city"
            style="?android:attr/spinnerDropDownItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/btn_dropdown" />

        <EditText
            android:id="@+id/et_signup_addressline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_blue_textbox"
            android:ems="10"
            android:hint="@string/address"
            android:maxLines="2"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall" >
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:layout_marginBottom="5dp" >

            <Button
                android:id="@+id/btn_signup_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/activated_listitem_color"
                android:text="@string/clear"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btn_signup_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/activated_listitem_color"
                android:text="@string/btn_sign_up"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>